--- a/src/css/opsz-demo.css
+++ b/src/css/opsz-demo.css
@@ -13,6 +13,7 @@
 	margin: 10rem auto;
 	width: var(--width);
 	user-select: none;
+	display: none;
 }
 
 .opsz-demo p {
